// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vaults.utils loadVaultPerformanceEvents loads no events if not available 1`] = `
Object {
  "data": Array [],
}
`;

exports[`vaults.utils loadVaultPerformanceEvents loads recent vault harvests and tree distributions 1`] = `
Object {
  "data": Array [
    Object {
      "harvests": Array [
        Object {
          "amount": Object {
            "hex": "0x05244a1fe78640",
            "type": "BigNumber",
          },
          "block": 1647315665,
          "timestamp": 0,
          "token": "0x1ccca1ce62c62f7be95d4a67722a8fdbed6eecb4",
          "tx": "0x6422091f26311d0442aa546f3f1444bcc111e361cbd506659f38082b1edab1721",
        },
      ],
      "timestamp": 0,
      "treeDistributions": Array [],
    },
    Object {
      "harvests": Array [
        Object {
          "amount": Object {
            "hex": "0x05da3040dc0640",
            "type": "BigNumber",
          },
          "block": 1647275665,
          "timestamp": 1647284957,
          "token": "0x1ccca1ce62c62f7be95d4a67722a8fdbed6eecb4",
          "tx": "0x6422091f26311d0442aa546f3f1444bcc111e361cbd506659f38082b1edab1720",
        },
      ],
      "timestamp": 1647284957,
      "treeDistributions": Array [
        Object {
          "amount": Object {
            "hex": "0x0186256ac640",
            "type": "BigNumber",
          },
          "block": 1647275665,
          "timestamp": 1647284957,
          "token": "0xBTC",
          "tx": "0x79ac9d3c0acfb293b07d539df3714cd873fc839e572894e346fea91c59b20afb",
        },
      ],
    },
    Object {
      "harvests": Array [],
      "timestamp": 1647286207,
      "treeDistributions": Array [
        Object {
          "amount": Object {
            "hex": "0x06eb09724ac640",
            "type": "BigNumber",
          },
          "block": 1647355665,
          "timestamp": 1647286207,
          "token": "0xBTC",
          "tx": "0x79ac9d3c0acfb293b07d539df3714cd873fc839e572894e346fea91c59b20afb",
        },
      ],
    },
    Object {
      "harvests": Array [
        Object {
          "amount": Object {
            "hex": "0x06eb09724ac640",
            "type": "BigNumber",
          },
          "block": 1647355665,
          "timestamp": 1647287457,
          "token": "0x1ccca1ce62c62f7be95d4a67722a8fdbed6eecb4",
          "tx": "0x6422091f26311d0442aa546f3f1444bcc111e361cbd506659f38082b1edab1722",
        },
      ],
      "timestamp": 1647287457,
      "treeDistributions": Array [],
    },
  ],
}
`;

exports[`vaults.utils loadVaultV15PerformanceEvents loads no events if not available 1`] = `
Object {
  "data": Array [],
}
`;

exports[`vaults.utils loadVaultV15PerformanceEvents loads recent vault harvests and tree distributions 1`] = `
Object {
  "data": Array [
    Object {
      "harvests": Array [
        Object {
          "amount": Object {
            "hex": "0x05da3040dc0640",
            "type": "BigNumber",
          },
          "block": 1647275665,
          "timestamp": 1647284957,
          "token": "0xTEST",
          "tx": "0x6422091f26311d0442aa546f3f1444bcc111e361cbd506659f38082b1edab172",
        },
      ],
      "timestamp": 1647284957,
      "treeDistributions": Array [
        Object {
          "amount": Object {
            "hex": "0x0186256ac640",
            "type": "BigNumber",
          },
          "block": 1647275665,
          "timestamp": 1647284957,
          "token": "0xBTC",
          "tx": "0x93286e1f1405cdc8441fe0102dd8663e0d13eea88e032743e287c365cfe290e5",
        },
      ],
    },
    Object {
      "harvests": Array [
        Object {
          "amount": Object {
            "hex": "0x05244a1fe78640",
            "type": "BigNumber",
          },
          "block": 1647315665,
          "timestamp": 1647286207,
          "token": "0xTEST",
          "tx": "0x6422091f26311d0442aa546f3f1444bcc111e361cbd506659f38082b1edab172",
        },
      ],
      "timestamp": 1647286207,
      "treeDistributions": Array [],
    },
    Object {
      "harvests": Array [],
      "timestamp": 1647286707,
      "treeDistributions": Array [
        Object {
          "amount": Object {
            "hex": "0x06eb09724ac640",
            "type": "BigNumber",
          },
          "block": 1647355665,
          "timestamp": 1647286707,
          "token": "0xBTC",
          "tx": "0x93286e1f1405cdc8441fe0102dd8663e0d13eea88e032743e287c365cfe290e5",
        },
      ],
    },
    Object {
      "harvests": Array [
        Object {
          "amount": Object {
            "hex": "0x06eb09724ac640",
            "type": "BigNumber",
          },
          "block": 1647355665,
          "timestamp": 1647287457,
          "token": "0xTEST",
          "tx": "0x30bc2ab3a59f7923ea20f7b99331dbc974130dc8b7152bb897d393fc2c506214",
        },
      ],
      "timestamp": 1647287457,
      "treeDistributions": Array [],
    },
  ],
}
`;

exports[`vaults.utils parseHarvestEvents converts vault events to typed usable events 1`] = `
Object {
  "distributions": Array [
    Object {
      "amount": Object {
        "hex": "0x0186256ac640",
        "type": "BigNumber",
      },
      "block": 1647275665,
      "timestamp": 1647284957,
      "token": "0xBTC",
      "tx": "0x79ac9d3c0acfb293b07d539df3714cd873fc839e572894e346fea91c59b20afb",
    },
    Object {
      "amount": Object {
        "hex": "0x06eb09724ac640",
        "type": "BigNumber",
      },
      "block": 1647355665,
      "timestamp": 1647286207,
      "token": "0xBTC",
      "tx": "0x79ac9d3c0acfb293b07d539df3714cd873fc839e572894e346fea91c59b20afb",
    },
  ],
  "harvests": Array [
    Object {
      "amount": Object {
        "hex": "0x05da3040dc0640",
        "type": "BigNumber",
      },
      "block": 1647275665,
      "timestamp": 1647284957,
      "token": "0x1ccca1ce62c62f7be95d4a67722a8fdbed6eecb4",
      "tx": "0x6422091f26311d0442aa546f3f1444bcc111e361cbd506659f38082b1edab1720",
    },
    Object {
      "amount": Object {
        "hex": "0x05244a1fe78640",
        "type": "BigNumber",
      },
      "block": 1647315665,
      "timestamp": 1647286207,
      "token": "0x1ccca1ce62c62f7be95d4a67722a8fdbed6eecb4",
      "tx": "0x6422091f26311d0442aa546f3f1444bcc111e361cbd506659f38082b1edab1721",
    },
    Object {
      "amount": Object {
        "hex": "0x06eb09724ac640",
        "type": "BigNumber",
      },
      "block": 1647355665,
      "timestamp": 1647287457,
      "token": "0x1ccca1ce62c62f7be95d4a67722a8fdbed6eecb4",
      "tx": "0x6422091f26311d0442aa546f3f1444bcc111e361cbd506659f38082b1edab1722",
    },
  ],
}
`;

exports[`vaults.utils parseHarvestEvents returns zero for timestamp on getBlock error 1`] = `
Object {
  "distributions": Array [
    Object {
      "amount": Object {
        "hex": "0x0186256ac640",
        "type": "BigNumber",
      },
      "block": 1647275665,
      "timestamp": 1647284957,
      "token": "0xBTC",
      "tx": "0x79ac9d3c0acfb293b07d539df3714cd873fc839e572894e346fea91c59b20afb",
    },
    Object {
      "amount": Object {
        "hex": "0x06eb09724ac640",
        "type": "BigNumber",
      },
      "block": 1647355665,
      "timestamp": 1647286207,
      "token": "0xBTC",
      "tx": "0x79ac9d3c0acfb293b07d539df3714cd873fc839e572894e346fea91c59b20afb",
    },
  ],
  "harvests": Array [
    Object {
      "amount": Object {
        "hex": "0x05da3040dc0640",
        "type": "BigNumber",
      },
      "block": 1647275665,
      "timestamp": 1647284957,
      "token": "0x1ccca1ce62c62f7be95d4a67722a8fdbed6eecb4",
      "tx": "0x6422091f26311d0442aa546f3f1444bcc111e361cbd506659f38082b1edab1720",
    },
    Object {
      "amount": Object {
        "hex": "0x05244a1fe78640",
        "type": "BigNumber",
      },
      "block": 1647315665,
      "timestamp": 0,
      "token": "0x1ccca1ce62c62f7be95d4a67722a8fdbed6eecb4",
      "tx": "0x6422091f26311d0442aa546f3f1444bcc111e361cbd506659f38082b1edab1721",
    },
    Object {
      "amount": Object {
        "hex": "0x06eb09724ac640",
        "type": "BigNumber",
      },
      "block": 1647355665,
      "timestamp": 1647287457,
      "token": "0x1ccca1ce62c62f7be95d4a67722a8fdbed6eecb4",
      "tx": "0x6422091f26311d0442aa546f3f1444bcc111e361cbd506659f38082b1edab1722",
    },
  ],
}
`;

exports[`vaults.utils parseHarvestV15Events converts vault events to typed usable events 1`] = `
Object {
  "distributions": Array [
    Object {
      "amount": Object {
        "hex": "0x0186256ac640",
        "type": "BigNumber",
      },
      "block": 1647275665,
      "timestamp": 1647284957,
      "token": "0xBTC",
      "tx": "0x93286e1f1405cdc8441fe0102dd8663e0d13eea88e032743e287c365cfe290e5",
    },
    Object {
      "amount": Object {
        "hex": "0x06eb09724ac640",
        "type": "BigNumber",
      },
      "block": 1647355665,
      "timestamp": 1647286707,
      "token": "0xBTC",
      "tx": "0x93286e1f1405cdc8441fe0102dd8663e0d13eea88e032743e287c365cfe290e5",
    },
  ],
  "harvests": Array [
    Object {
      "amount": Object {
        "hex": "0x05da3040dc0640",
        "type": "BigNumber",
      },
      "block": 1647275665,
      "timestamp": 1647284957,
      "token": "0xTEST",
      "tx": "0x6422091f26311d0442aa546f3f1444bcc111e361cbd506659f38082b1edab172",
    },
    Object {
      "amount": Object {
        "hex": "0x05244a1fe78640",
        "type": "BigNumber",
      },
      "block": 1647315665,
      "timestamp": 1647286207,
      "token": "0xTEST",
      "tx": "0x6422091f26311d0442aa546f3f1444bcc111e361cbd506659f38082b1edab172",
    },
    Object {
      "amount": Object {
        "hex": "0x06eb09724ac640",
        "type": "BigNumber",
      },
      "block": 1647355665,
      "timestamp": 1647287457,
      "token": "0xTEST",
      "tx": "0x30bc2ab3a59f7923ea20f7b99331dbc974130dc8b7152bb897d393fc2c506214",
    },
  ],
}
`;
